--- a/src/Components/MainPage/MainPage.css
+++ b/src/Components/MainPage/MainPage.css
@@ -3,6 +3,12 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    padding: 10px;
+    padding: 50px;
   }
+  .side{
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px;
+    width: 50%;
+}
   
