--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
 .App-link {
   color: #61dafb;
 }
+.card {
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  margin-bottom: 10px; /* Added */
+}
 
 @keyframes App-logo-spin {
   from {
